--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "all": "npm run build && npm run format && npm run lint && npm run package && npm test",
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
@@ -44,7 +45,6 @@
     "eslint-plugin-github": "^4.3.6",
     "eslint-plugin-jest": "^26.5.3",
     "husky": "^8.0.1",
-    "husky-init": "^8.0.0",
     "jest": "^27.2.5",
     "js-yaml": "^4.1.0",
     "lint-staged": "^13.0.1",
