Changing diff command and uploading diff

--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           if [ "$(git diff --minimal --ignore-space-at-eol --ignore-cr-at-eol dist/ | wc -l)" -gt "0" ]; then
             echo "Detected uncommitted changes after build.  See status below:"
-            git diff --minimal
+            git diff dist/ > diff.txt
             exit 1
           fi
         id: diff
@@ -51,3 +51,9 @@ jobs:
         with:
           name: dist
           path: dist/
+
+      - uses: actions/upload-artifact@v3
+        if: ${{ failure() && steps.diff.conclusion == 'failure' }}
+        with:
+          name: diff
+          path: ./diff.txt
