--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Rebuild the dist/ directory
         run: |
-          npm run build
-          npm run package
+          npm run build:clean
+          npm run package:clean
 
       - name: Compare the expected and actual dist/ directories
         run: |
