--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
+    "build:clean": "rm -rf lib & npm run build",
     "format": "prettier --write 'src/*.ts'",
     "format-check": "prettier --check 'src/*.ts'",
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
+    "package:clean": "rm -rf dist & npm run package",
     "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package",
+    "all": "npm run build:clean && npm run format && npm run lint && npm run package:clean",
     "prepare": "husky install"
   },
   "repository": {
