--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -40,7 +40,8 @@ jobs:
         run: |
           if [ "$(git diff --minimal --ignore-space-at-eol --ignore-cr-at-eol dist/ | wc -l)" -gt "0" ]; then
             echo "Detected uncommitted changes after build.  See status below:"
-            git diff dist/ > diff.txt
+            git diff
+            wc -l
             exit 1
           fi
         id: diff
@@ -51,9 +52,3 @@ jobs:
         with:
           name: dist
           path: dist/
-
-      - uses: actions/upload-artifact@v3
-        if: ${{ failure() && steps.diff.conclusion == 'failure' }}
-        with:
-          name: diff
-          path: ./diff.txt
