--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -38,10 +38,10 @@ jobs:
 
       - name: Compare the expected and actual dist/ directories
         run: |
-          if [ "$(git diff --minimal --ignore-space-at-eol --ignore-cr-at-eol dist/ | wc -l)" -gt "0" ]; then
+          if [ "$(git diff --ignore-space-at-eol --ignore-cr-at-eol dist/ | wc -l)" -gt "0" ]; then
             echo "Detected uncommitted changes after build.  See status below:"
-            git diff
-            wc -l
+            git diff dist/
+            git diff dist/ | wc -l
             exit 1
           fi
         id: diff
