replace line endings

--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -35,6 +35,7 @@ jobs:
         run: |
           npm run build:clean
           npm run package:clean
+          find . -type f -exec dos2unix {} \;
 
       - name: Compare the expected and actual dist/ directories
         run: |
