--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -41,8 +41,7 @@ jobs:
         run: |
           if [ "$(git diff --ignore-space-at-eol --ignore-cr-at-eol dist/ | wc -l)" -gt "0" ]; then
             echo "Detected uncommitted changes after build.  See status below:"
-            git diff dist/
-            git diff dist/ | wc -l
+            git diff --text dist/
             exit 1
           fi
         id: diff
