--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -38,9 +38,9 @@ jobs:
 
       - name: Compare the expected and actual dist/ directories
         run: |
-          if [ "$(git diff --ignore-space-at-eol --ignore-cr-at-eol dist/ | wc -l)" -gt "0" ]; then
+          if [ "$(git diff --text --ignore-space-at-eol --ignore-cr-at-eol -b -w --ignore-blank-lines dist/ | wc -l)" -gt "0" ]; then
             echo "Detected uncommitted changes after build.  See status below:"
-            git diff --text dist/
+            git diff --text --ignore-space-at-eol --ignore-cr-at-eol -b -w --ignore-blank-lines dist/
             exit 1
           fi
         id: diff
