--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -33,14 +33,14 @@ jobs:
 
       - name: Rebuild the dist/ directory
         run: |
-          npm run build
-          npm run package
+          npm run build:clean
+          npm run package:clean
 
       - name: Compare the expected and actual dist/ directories
         run: |
-          if [ "$(git diff --ignore-space-at-eol dist/ | wc -l)" -gt "0" ]; then
+          if [ "$(git diff --text --ignore-space-at-eol --ignore-cr-at-eol -b -w --ignore-blank-lines dist/ | wc -l)" -gt "0" ]; then
             echo "Detected uncommitted changes after build.  See status below:"
-            git diff
+            git diff --text --ignore-space-at-eol --ignore-cr-at-eol -b -w --ignore-blank-lines dist/
             exit 1
           fi
         id: diff
