--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "build": "tsc",
     "build:clean": "rm -rf lib & npm run build",
-    "format": "prettier --write 'src/*.ts'",
-    "format-check": "prettier --check 'src/*.ts'",
-    "lint": "eslint src/**/*.ts",
+    "format": "prettier --write 'src/*.ts' 'tests/*.ts'",
+    "format-check": "prettier --check 'src/*.ts' 'tests/*.ts'",
+    "lint": "eslint --ext ts src tests",
     "package": "ncc build --source-map --license licenses.txt",
     "package:clean": "rm -rf dist & npm run package",
     "test": "jest",
@@ -36,6 +36,7 @@
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/node": "^18.0.0",
     "@typescript-eslint/parser": "^5.30.0",
+    "@types/jest": "^27.5.2",
     "@vercel/ncc": "^0.34.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
