--- a/.github/workflows/update-notion.yml
+++ b/.github/workflows/update-notion.yml
@@ -14,8 +14,8 @@ jobs:
         id: update-card
         with:
           page_property: 'Status'
-          page_property_type: 'select'
-          on_pr: 'In progress'
+          page_property_type: 'status'
+          on_pr: 'In review'
           on_merge: 'Done'
         env:
           NOTION_KEY: ${{ secrets.NOTION_GITHUB_INTEGRATION_KEY }}
